--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <link rel="stylesheet" href="/assests/css/styles.css">
-    <link rel="stylesheet" href="/assests/css/reset.css">
-    <link rel="stylesheet" href="/assests/css/font.css">
-    <link rel="stylesheet" href="/assests/css/scrollbar.css">
-    <link rel="stylesheet" href="assests/css/inforEmployee.css".css">
-    <link rel="stylesheet" href="/assests/font/fontawesome-5.15.1/css/all.css">
-    <link rel="stylesheet" href="/assests/font/fontawesome-5.15.1/css/all.min.css">
+    <link rel="stylesheet" href="./assests/css/styles.css">
+    <link rel="stylesheet" href="./assests/css/reset.css">
+    <link rel="stylesheet" href="./assests/css/font.css">
+    <link rel="stylesheet" href="./assests/css/scrollbar.css">
+    <link rel="stylesheet" href="./assests/css/inforEmployee.css">
+    <link rel="stylesheet" href="./assests/font/fontawesome-5.15.1/css/all.css">
+    <link rel="stylesheet" href="./assests/font/fontawesome-5.15.1/css/all.min.css">
     <title>Document</title>
 </head>
 <body>
