--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
                     <div class="dashboard__pagination-direct">
                         <button class="dashboard__pagination-first"></button>
                         <button class="dashboard__pagination-previous"></button>
-                        <button class="btn__paging dashboard__pagination-one dashboard__pagination-current">1</button>
-                        <button class="btn__paging dashboard__pagination-two">2</button>
-                        <button class="btn__paging dashboard__pagination-three">3</button>
-                        <button class="btn__paging dashboard__pagination-four">4</button>
+                        <button index="1" class="btn__paging dashboard__pagination-one dashboard__pagination-current">1</button>
+                        <button index="2" class="btn__paging dashboard__pagination-two">2</button>
+                        <button index="3" class="btn__paging dashboard__pagination-three">3</button>
+                        <button index="0" class="btn__paging dashboard__pagination-four">4</button>
                         <button class="dashboard__pagination-next"></button>
                         <button class="dashboard__pagination-last"></button>
                     </div>
@@ -217,6 +217,7 @@
                                 <div class="body__infor-item">
                                     <label for="" class="">Email(<label style="color: red;">*</label>)</label>
                                     <input type="email" value="" propValue="Email" required>
+                                    <span class="error-email" style="color: red; margin-top: 4px; font-size: 12px;"></span>
                                 </div>
                                 <div class="body__infor-item">
                                     <label for="" class="">Số điện thoại(<label style="color: red;">*</label>)</label>
@@ -282,7 +283,7 @@
                     <button class="btn modal__container-footer-save" id="btnSave">
                         <!-- <img src="./assests/icon/document-online.png" alt=""> -->
                         <i class="fas fa-save"></i>
-                        <label for="">Save</label>
+                        <label for="">Lưu</label>
                     </button>
                 </div>
     
